Adding events page for rising stars

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                         <a class="nav-item nav-link" href="#about">About </a>
                         <a class="nav-item nav-link" href="#mission">Mission </a>
                         <a class="nav-item nav-link" href="#gallery">Gallery</a>
+                        <a class="nav-item nav-link" href="https://www.theblackettlabfamily.com/rising-stars-22">Rising Stars '22 </a>
                         <a class="nav-item nav-link" href="#cta">Contact </a>
                         <a href="https://twitter.com/blackettlabfam" class="nav-item nav-link nav-icon"
                             target="_blank"><i class="fab fa-twitter"></i> </a><a
@@ -576,18 +577,7 @@
                 <a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a>
             </div>
 
-           
-            <div class="shell">
-            <h3 style="text-align: center;">
-                In partnership with:
-            </h3>
-            </div>
-
-            <div class="center-div row partners-div">
-            <div class="col-sm-5">
-                <img class="partner-logo" src="images/IOP-MasterLogo-White-RGB.png" alt="">
-            </div>
-            </div>
+    
         </section>
 
     <section class="cta" id=cta>
