--- a/join/index.html
+++ b/join/index.html
@@ -58,12 +58,13 @@
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active" href="https://theblackettlabfamily.com">Home <div class="nav-line"></div> <span
+                        <a class="nav-item nav-link active" href="https://theblackettlabfamily.com">Home<span
                                 class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#about">About <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#mission">Mission <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#gallery">Gallery <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#cta">Contact <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#about">About</a>
+                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#mission">Mission</a>
+                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#gallery">Gallery</a>
+                        <a class="nav-item nav-link" href="https://www.theblackettlabfamily.com/rising-stars-22">Rising Stars '22</a>
+                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#cta">Contact</a>
                         <a href="https://twitter.com/blackettlabfam" class="nav-item nav-link nav-icon"
                             target="_blank"><i class="fab fa-twitter"></i> </a><a
                             href="https://www.instagram.com/blackettlabfam/" class="nav-item nav-link nav-icon"
@@ -112,11 +113,11 @@
                 >.
 
               </p>
-          <p class="subparagraph">
+          <p class="subtext">
           This questionnaire uses <a class="hyperlink" href="https://www.google.com/recaptcha/about/" target="_blank">reCAPTCHA</a> to block spambots.</p>
 
           <span id=ReadMore>
-            <p class="subparagraph">We hope you won't mind Google storing the browser cookies that come with our use of this service.
+            <p class="subtext">We hope you won't mind Google storing the browser cookies that come with our use of this service.
             If you're ok with this, you'll need to give your consent below, before you can proceed.
             If you'd rather that Google kept their cookies to themselves, you can join us by emailing us at the address above.
             It would be more convenient for us if you could use the questionnaire, but we understand and applaud the determination of anyone who eschews all Google services.</p>
@@ -307,7 +308,7 @@
           </div>
 
           <div class="form-group">
-            <p class="subparagraph">
+            <p class="subtext">
               Privacy Policy: As a member, we will securely store your email address
               and name (to help us recognise your request to join our private
               Facebook group), and your answer to “what you hope to get out of
@@ -357,14 +358,14 @@
         >
           <p class="paragraph" style="
           margin: 0 0 5% 0;">Having Trouble?</p>
-          <p  class="subparagraph">
+          <p  class="subtext">
             Perhaps your mobile signal is weak, or our servers are feeling
             overworked. Either way, we apologise for the inconvenience. If
             you're fed up of trying to submit the form, feel free to email your
             information to us instead by doing one of the following:
           </p>
           <div>
-            <ul class="centreList subparagraph">
+            <ul class="centreList subtext">
               <li>
                 <b>Easiest option:</b> click
                 <a
