Updating the nav bar across all pages

--- a/join/index.html
+++ b/join/index.html
@@ -46,33 +46,45 @@
     <div>
 
         <section>
-
-            <nav id="navbar" class="navbar sticky navbar-expand-lg navbar-dark">
-                <a href="https://theblackettlabfamily.com"><img class="navbar-brand" src="parent/images/logo_white.png" alt="Brand Logo"></a>
-
-                <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active" href="https://theblackettlabfamily.com">Home<span
-                                class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#about">About</a>
-                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#mission">Mission</a>
-                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#gallery">Gallery</a>
-                        <a class="nav-item nav-link" href="https://www.theblackettlabfamily.com/rising-stars-22">Rising Stars '22</a>
-                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#cta">Contact</a>
-                        <a href="https://twitter.com/blackettlabfam" class="nav-item nav-link nav-icon"
-                            target="_blank"><i class="fab fa-twitter"></i> </a><a
-                            href="https://www.instagram.com/blackettlabfam/" class="nav-item nav-link nav-icon"
-                            target="_blank"><i class="fab fa-instagram"></i></a>
-
-                    </div>
-                </div>
-            </nav>
+          <nav id="navbar" class="navbar sticky navbar-expand-lg navbar-dark">
+            <a href="https://theblackettlabfamily.com"><img class="navbar-brand" src="parent/images/logo_white.png" alt="Brand Logo"></a>
+            <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="https://theblackettlabfamily.com">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://theblackettlabfamily.com/#about">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://theblackettlabfamily.com/#mission">Mission</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#gallery">Gallery</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="https://www.theblackettlabfamily.com/rising-stars">Rising Stars</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://theblackettlabfamily.com/#cta">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a href="https://twitter.com/blackettlabfam" class="nav-link nav-icon"
+                  target="_blank"><i class="fab fa-twitter"></i> </a>
+                </li>
+                <li class="nav-item">
+                  <a href="https://www.instagram.com/blackettlabfam/" class="nav-link nav-icon"
+                  target="_blank"><i class="fab fa-instagram"></i></a>
+                </li>
+              </ul>
+            </div>
+        </nav>
         </section>
 
     </div>
