Adding link to poster pdf and updating image

--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -105,7 +105,7 @@
               </p>
 
               <a class="btn btn-outline-light"
-              href="https://docs.google.com/forms/d/1LS4F5qXPXm6EO5HQ1RLPR-2-A9OOHc8y5FLirmRIrRI/edit?ts=625562cb"
+              href="https://forms.gle/FWBbrFgxJW3wE5ZN6"
             >
              Register here!
             </a>
@@ -127,7 +127,7 @@
                 </ul>
               </div>
               <div class="col-md-6">
-                <img src="parent/images/BLF Rising Stars Poster.jpg" alt="BLF Rising Stars Event Poster">
+                <a href="parent/files/BLF Rising Stars Poster.pdf"><img src="parent/images/BLF Rising Stars Poster.jpg" alt="BLF Rising Stars Event Poster"></a>
               </div>
                    
               </div>
