--- a/join/index.html
+++ b/join/index.html
@@ -68,7 +68,7 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="https://www.theblackettlabfamily.com/rising-stars">Rising Stars</a>
+                    <a class="dropdown-item" href="https://theblackettlabfamily.com/rising-stars">Rising Stars</a>
                   </div>
                 </li>
                 <li class="nav-item">
