Fixes bug on event page and uploads reduced files

--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -80,10 +80,10 @@
 
     </div>
 
-      <div class="shell intro">
+      <div class="shell form">
         <div class="header" >
 
-        <h1 class="heading"> Rising Stars <hr></h1></div>
+        <h1 class="heading">Rising Stars <hr></h1></div>
 
 
            <p class="maintext">
