Adds back space under instagram feed for mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles_03.css">
+    <link rel="stylesheet" href="css/styles_04.css">
 
     <!-- Google Fonts -->
     <link href="third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -585,8 +585,9 @@
             <div class="curator-box container-fluid" id="curator-feed-default-feed-layout">
                 <a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a>
             </div>
-
-
+            <div class="filler">
+        
+            </div>
         </section>
 
     <section class="cta" id=cta>
