Update to more info about the network

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                         <div class="popup-button"><p class="subtext">Click <a class="clickhere" onclick="togglePopup()">here</a> to read more about our community and use the button below to join.
                         <span class="popup-text" id="popup">
 
-                                Members of The Blackett Lab Family connect primarily through Facebook. Our network offers academic and professional support, casual socialising and networking with like minded people and exciting opportunities to work together for positive social impact.
+                                Our network offers academic and professional support, casual socialising and networking with like minded people and exciting opportunities to work together for positive social impact.
                                 We have met regularly (and virtually!) for fun, topical chat, and exchanging opportunities to collaborate together on cool social media projects, including work for the Institute of Physics and school outreach.
 
                              </span></p></div>
@@ -660,7 +660,7 @@
                        <p class="subtext">Click <a class="clickhere" onclick="togglePopup()">here</a> to read more about our community and use the button below to join.
                         <span class="popup-text" id="popup-web">
 
-                                Members of The Blackett Lab Family connect primarily through Facebook. Our network offers academic and professional support, casual socialising and networking with like minded people and exciting opportunities to work together for positive social impact.
+                                Our network offers academic and professional support, casual socialising and networking with like minded people and exciting opportunities to work together for positive social impact.
                                 We have met regularly (and virtually!) for fun, topical chat, and exchanging opportunities to collaborate together on cool social media projects, including work for the Institute of Physics and school outreach.
 
                              </span>
