Adding back iop logo and text

--- a/index.html
+++ b/index.html
@@ -585,9 +585,20 @@
             <div class="curator-box container-fluid" id="curator-feed-default-feed-layout">
                 <a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a>
             </div>
-            <div class="filler">
-        
-            </div>
+            <div class="shell">
+                <h3 style="text-align: center;">
+                    In partnership with:
+                </h3>
+                </div>
+    
+                <div class="center-div row partners-div">
+                <div class="col-md-6">
+                    <img class="partner-logo" src="images/IOP-MasterLogo-White-RGB.png" alt="">
+                </div>
+                <div class="col-md-5">
+                    <p class="subtext">We have established a working relationship with The Institute of Physics through a Memomorandum of Understanding commencing in 2022.</p>
+                </div>
+                </div>
         </section>
 
     <section class="cta" id=cta>
