--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                  <ul class="navbar-nav ml-auto">
+                  <ul class="navbar-nav ml-auto  justify-content-center">
                     <li class="nav-item active">
                       <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                     </li>
@@ -56,10 +56,10 @@
                       <a class="nav-link" href="#mission">Mission</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-item nav-link" href="#gallery">Gallery</a>
+                      <a class="nav-link" href="#gallery">Gallery</a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="rising-stars/index.html">Rising Stars</a>
                       </div>
@@ -76,7 +76,10 @@
                       target="_blank"><i class="fab fa-instagram"></i></a>
                     </li>
                   </ul>
-                </div>
+                <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
+                    <button class="btn btn-light" type="submit">Donate</button>
+                </form>
+            </div>
             </nav>
         </section>
 
