--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -74,6 +74,9 @@
                       target="_blank"><i class="fab fa-instagram"></i></a>
                     </li>
                   </ul>
+                  <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
+                    <button class="btn btn-light" type="submit">Donate</button>
+                </form>
                 </div>
             </nav>
         </section>
