Fixing navbar alignment issue

--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -54,7 +54,7 @@
                       <a class="nav-link" href="../index.html#mission">Mission</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-item nav-link" href="../index.html#gallery">Gallery</a>
+                      <a class="nav-link" href="../index.html#gallery">Gallery</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
