--- a/join/welcome.html
+++ b/join/welcome.html
@@ -62,7 +62,7 @@
                 <a class="nav-link" href="https://theblackettlabfamily.com/#mission">Mission</a>
               </li>
               <li class="nav-item">
-                <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#gallery">Gallery</a>
+                <a class="nav-link" href="https://theblackettlabfamily.com/#gallery">Gallery</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
