--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles_05.css">
+    <link rel="stylesheet" href="css/styles_06.css">
 
     <!-- Google Fonts -->
     <link href="third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -77,7 +77,7 @@
                     </li>
                   </ul>
                 <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
-                    <button class="btn btn-light" type="submit">Donate</button>
+                    <button class="btn btn-dark donate-btn" type="submit">Donate</button>
                 </form>
             </div>
             </nav>
