--- a/join/welcome.html
+++ b/join/welcome.html
@@ -22,7 +22,7 @@
      ####################################################################### -->
 
     <link rel="stylesheet" href="https://theblackettlabfamily.com/third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="parent/css/styles_05.css">
+    <link rel="stylesheet" href="parent/css/styles_06.css">
 
     <!-- Google Fonts -->
     <link href="https://theblackettlabfamily.com/third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -83,7 +83,7 @@
               </li>
             </ul>
             <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
-              <button class="btn btn-light" type="submit">Donate</button>
+              <button class="btn btn-dark donate-btn" type="submit">Donate</button>
           </form>
           </div>
       </nav>
