--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="../images/logo_black.png">
 
     <link rel="stylesheet" href="../third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles_05.css">
+    <link rel="stylesheet" href="../css/styles_06.css">
 
     <!-- Google Fonts -->
     <link href="../third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -75,7 +75,7 @@
                     </li>
                   </ul>
                   <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
-                    <button class="btn btn-light" type="submit">Donate</button>
+                    <button class="btn btn-dark donate-btn" type="submit">Donate</button>
                 </form>
                 </div>
             </nav>
