Updating redirect page Issue #17

--- a/join/redirect.html
+++ b/join/redirect.html
@@ -97,7 +97,7 @@
         <h1 class="heading">Thank you! <hr></h1></div>
 
         <p class="maintext">
-            Based on your responses, membership is not the best way to engage with The Blackett Lab Family. However, we warmly recommend the following for your consideration:
+            Thank you, your membership request is under review. In the mean time, we warmly recommend the following for your consideration:
         </p>
 
         <ul class="redirect-list subtext centreList">
