--- a/index.html
+++ b/index.html
@@ -701,6 +701,8 @@
                             class="footer-icon fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/blackettlabfam/" target="_blank"><i
                             class="footer-icon fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"
+                    ><i class="footer-icon fab fa-linkedin"></i></a>
 
                     <p class="text">© Copyright 2020 The Blackett Lab Family CIC </p>
                     <p class="text"> All Rights Reserved. </p>
