--- a/join/index.html
+++ b/join/index.html
@@ -420,11 +420,11 @@
       <div class="center-div">
         <footer class="footer" id="footer">
             <a href="https://twitter.com/blackettlabfam" target="_blank"
-              ><i class="footer-icon fab fa-twitter"></i
-            ></a>
+              ><i class="footer-icon fab fa-twitter"></i></a>
             <a href="https://www.instagram.com/blackettlabfam/" target="_blank"
-              ><i class="footer-icon fab fa-instagram"></i
-            ></a>
+              ><i class="footer-icon fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"
+              ><i class="footer-icon fab fa-linkedin"></i></a>
 
             <p >© Copyright 2020 The Blackett Lab Family CIC</p>
             <p >All Rights Reserved.</p>
