--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="rising-stars/index.html">Rising Stars</a>
+                        <a class="dropdown-item" href="rp2023/index.html">Representing Physics 2023</a>
                       </div>
                     </li>
                     <li class="nav-item">
@@ -76,7 +77,10 @@
                       target="_blank"><i class="fab fa-instagram"></i></a>
                     </li>
                   </ul>
-                </div>
+                <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
+                    <button class="btn btn-dark black-btn" type="submit">Donate</button>
+                </form>
+            </div>
             </nav>
         </section>
 
@@ -423,8 +427,8 @@
                         <div>
                             <h3 class="mission-title">Inspire
                             </h3>
-                            <p class="subtext">We inspire ourselves and others – regardless of gender, ethnicity, orientation, ability, or
-                                background – but especially the future generation of UK based Black physicists.
+                            <p class="subtext">We inspire ourselves and others - regardless of gender, ethnicity, orientation, ability, or
+                                background - but especially the future generation of UK based Black physicists.
                             </p>
                         </div>
 
@@ -638,7 +642,7 @@
 
             </div>
 
-            <div class="cta-div web-only">
+            <div class="cta-div web-only  text-center">
                 <h1 class="heading">Get in touch </h1>
 
                 <div class="row">
@@ -668,19 +672,23 @@
                         <p class="subtext" style="word-wrap: break-word;">connect@theblackettlab&shy;family.com</p>
 
                 </div></div>
-
                 <div class="row">
-                    <div class="col-md-6"><a href="https://join.theblackettlabfamily.com">
+                    <div class="col-md-6">
+                    <a href="https://join.theblackettlabfamily.com">
                     <div class="white-border-round"><i
                         class="fas fa-2x fa-user-plus"></i></a>
+                    </div> </div>
 
-            </div> </div>
-            <div class="col-md-6">
-                <div class="white-border-round"><a href="mailto:connect@theblackettlabfamily.com"><i
-                    class="far fa-2x fa-envelope"></i></a></div>
-            </div>
+                    <div class="col-md-6">
+                        <div class="white-border-round"><a href="mailto:connect@theblackettlabfamily.com"><i
+                            class="far fa-2x fa-envelope"></i></a></div>
+                    </div>
 
                 </div>
+            </section>  
+        
+            <section id="footer">
+             
 
                 <div class="footer" id="footer">
                     <a href="https://twitter.com/blackettlabfam" target="_blank"><i
