--- a/join/index.html
+++ b/join/index.html
@@ -69,6 +69,7 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="https://theblackettlabfamily.com/rising-stars">Rising Stars</a>
+                    <a class="dropdown-item" href="https://theblackettlabfamily.com/rp2023">Representing Physics 2023</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -83,6 +84,9 @@
                   target="_blank"><i class="fab fa-instagram"></i></a>
                 </li>
               </ul>
+              <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
+                <button class="btn btn-dark black-btn" type="submit">Donate</button>
+            </form>
             </div>
         </nav>
         </section>
