--- a/rising-stars/index.html
+++ b/rising-stars/index.html
@@ -60,6 +60,7 @@
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Rising Stars</a>
+                        <a class="dropdown-item" href="../rp2023/index.html">Representing Physics 2023</a>
                       </div>
                     </li>
                     <li class="nav-item">
@@ -74,6 +75,9 @@
                       target="_blank"><i class="fab fa-instagram"></i></a>
                     </li>
                   </ul>
+                  <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
+                    <button class="btn btn-dark black-btn" type="submit">Donate</button>
+                </form>
                 </div>
             </nav>
         </section>
@@ -82,8 +86,8 @@
 
       <div class="shell form">
         <div class="header" >
-
-        <h1 class="heading">Rising Stars <hr></h1></div>
+        <h1 class="heading">Rising Stars <hr></h1>
+        </div>
 
 
            <p class="maintext">
@@ -92,14 +96,14 @@
             <p class="subtext" style="padding-bottom:.5rem">
               The workshop will be modelled on the highly successful Rising Stars programme offered by MIT and will bring together 30 outstanding final year PhD students and postdocs from the UK in the fields of physics and engineering for an intensive three-day workshop dedicated to career development, improving access and participation in research. There will be activities directed both to those looking to start and pursue careers in research, as well as activities for those looking to further their careers beyond academia.
 
-              The funded opportunity will take place at Imperial College London (South Kensington) on <span class="orange-text bold-text"> Wednesday 29th June - Friday 1st July</span> and is for physicists and engineers of Black heritage.
+              The funded opportunity will take place at Imperial College London (South Kensington) on <span class="orange-text"> <b>Wednesday 29th June - Friday 1st July</b> </span> and is for physicists and engineers of Black heritage.
               </p>
 
-              <a class="btn btn-outline-light"
+              <!-- <a class="btn btn-outline-light"
               href="https://forms.gle/FWBbrFgxJW3wE5ZN6"
             >
              Register here!
-            </a>
+            </a> -->
 
               </div>
 
