Fix navbar logo link

--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -36,7 +36,7 @@
 <body>
   <section>
     <nav id="navbar" class="navbar sticky navbar-expand-lg navbar-dark">
-      <a href="#"><img class="navbar-brand" src="../images/logo_white.png" alt="Brand Logo"></a>
+      <a href="../index.html"><img class="navbar-brand" src="../images/logo_white.png" alt="Brand Logo"></a>
       <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -86,26 +86,28 @@
       </div>
     </div>
 
-    <div class="white-div d-flex flex-column text-center">
-      <h1 class="heading">Welcome!</h1>
+    <div class="white-div d-flex flex-column ">
+      <h1 class="heading text-center">Welcome!</h1>
       <p class="subtext">We are super excited to offer this opportunity to <b>London Year 11 & Year 12 students of Black heritage</b> for a summer experience of physics like no other!</p>
       <p class="subtext">As a network of Black British physicists, we are passionate about <b>increasing Black representation</b> and the many cool and lucrative opportunities that physics at school and beyond can offer you!</p>
       <p class="subtext"> So, we have linked up with some real big-hitters to put on a <b>totally free, three-day experience of physics </b> - with loads of extra surprises in store. Find out more details below! </p>
     </div>
     
-    <div class="white-div d-flex flex-column text-center">
-      <h1 class="heading">Where & when?</h1>
+    <div class="white-div d-flex flex-column">
+      <h1 class="heading text-center">Where & when?</h1>
       <p class="subtext">We will be hosting the programme over <b>three</b> days at <b>three</b> different institutions:</p>
-      <ul>
-        <li> <b>31 July 2023</b> - Blackett Laboratory, Imperial College London </li> 
-        <li> <b>1 August 2023</b> - National Physical Laboratory, Teddington </li>
-        <li> <b>2 August 2023</b> - Institute of Physics, London</li>
-      </ul>
+      <div >
+        <ul>
+          <li> <b>31 July 2023</b> - Blackett Laboratory, Imperial College London </li> 
+          <li> <b>1 August 2023</b> - National Physical Laboratory, Teddington </li>
+          <li> <b>2 August 2023</b> - Institute of Physics, London</li>
+        </ul>
+    </div>
       <p class="subtext">You will only need to travel to and from <b>The Blackett Laboratory, Imperial College London</b> on each day. Travel expenses will be fully covered. Transport to and from the National Physical Laboratory and Institute of Physics will be arranged.</p>
     </div>
     
-    <div class="white-div d-flex flex-column text-center">
-      <h1 class="heading">Am I eligible?</h1>
+    <div class="white-div d-flex flex-column">
+      <h1 class="heading text-center">Am I eligible?</h1>
       <p class="subtext">
       We recognise the fact that <b>people like us</b> are severely underrepresented among those studying physics* and
       working in physics-related fields. Our mission is to change that! We encourage you to apply if you are:
@@ -174,8 +176,8 @@
       </div>
     </div>
 
-    <div class="white-div d-flex flex-column text-center">
-      <h1 class="heading">How do I apply?</h1>
+    <div class="white-div d-flex flex-column">
+      <h1 class="heading  text-center">How do I apply?</h1>
       <p class="subtext"> Click on the link below, which will take you to an application form. <br> It will ask you for:</p>
       <ul>         
         <li> Your personal and contact details (so we can inform you of the outcome of your application) </li> 
@@ -184,15 +186,15 @@
         <li> Additional information about your studies (so we know where you're at) </li>
         <li> Information about why you would like to attend Representing Physics 2023 (150-200 words)</li>
       </ul>
-      <div class="container">
+      <div class="container  text-center">
         <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply here!</button>
       </div>
     </div>
 
     <div class="white-div d-flex flex-column text-center">
-      <h1 class="heading">Supported by:</h1>
+      <h1 class="heading">Supported by</h1>
       <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col">
             <img src="../images/IOP-StackedLogo-Colour-RGB.png" alt="">
           </div>
