Center cta for mobile

--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@
             <div class="curator-box container-fluid" id="curator-feed-default-feed-layout">
                 <a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a>
             </div>
-            <div class="shell">
-                <h3 style="text-align: center;">
+            <div class="shell text-center">
+                <h3>
                     In partnership with:
                 </h3>
                 </div>
@@ -601,7 +601,7 @@
         <div class="device-box">
             <div class="device device-4"></div>
         </div>
-        <div class="cta-outer">
+        <div class="cta-outer text-center">
             <div class="cta-div mobile-only">
                 <h1 class="heading">Get in touch </h1>
 
