--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -192,23 +192,27 @@
     </div>
 
     <div class="white-div d-flex flex-column text-center">
-      <h1 class="heading">Supported by</h1>
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col">
-            <img src="../images/IOP-StackedLogo-Colour-RGB.png" alt="">
+
+      <h1 class="heading">Project Partners</h1>
+      <div class="container" >
+        <div style="padding-bottom: 10%;" class="row align-items-center">
+          <div class="col-4">
+            <img style="width:60%;" src="../images/IOP-StackedLogo-Colour-RGB.png" alt="">
           </div>
-          <div class="col">
-            <img  src="../images/TOT_Logo_PMS392_32mm.jpg" alt="">
-          </div>
-          <div class="col">
+          <div class="col-4">
             <img src="../images/NPL_Blue_294.jpg" alt="">
           </div>
-          <div class="col">
+          <div class="col-4">
             <img src="../images/Logo_for_Imperial_College_London.svg.png" alt="">
           </div>
         </div>
       </div>
+
+      <h1 class="heading">Supported by</h1>
+        <div class="container ">
+          <img style="width:20%" src="../images/TOT_Logo_PMS392_32mm.jpg" alt="">
+        </div>
+    
     </div>
 
     <div class="d-flex flex-column text-center" >
