Add key dates section

--- a/rp2023/index.html
+++ b/rp2023/index.html
@@ -176,23 +176,58 @@
       </div>
     </div>
 
-    <div class="white-div d-flex flex-column">
-      <h1 class="heading  text-center">How do I apply?</h1>
-      <p class="subtext"> Click on the link below, which will take you to an application form. <br> It will ask you for:</p>
-      <ul>         
-        <li> Your personal and contact details (so we can inform you of the outcome of your application) </li> 
-        <li> Contact details for your parent / guardian (so they can register you for the programme, if successful) </li>
-        <li> Your school and a nominated teacher (so they can provide a supporting reference) </li>
-        <li> Additional information about your studies (so we know where you're at) </li>
-        <li> Information about why you would like to attend Representing Physics 2023 (150-200 words)</li>
-      </ul>
-      <div class="container  text-center">
-        <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply here!</button>
+  <div class="white-div d-flex flex-column text-center">
+    <h1 class="heading">Key dates</h1>
+    <!-- <div class="container align-items-center"> -->
+      <!-- <div class="row">
+        <div class="col-12"> -->
+          <div id="content">
+            <ul class="timeline">
+              <li class="event" data-date="6th March 2023">
+                  <p>Applications open</p>
+                  <p class="subtext">Lorem ipsum. Lorem ipsum.</p>
+              </li>
+              <li class="event" data-date="27th March 2023">
+                  <p>Instagram Live Q&A</p>
+                  <p class="subtext">Tune in to our Instagram and we will answer your questions - live!</p>
+              </li>
+              <li class="event" data-date="26th May 2023">
+                  <p>Applications close</p>
+              </li>
+              <li class="event" data-date="9th June 2023">
+                  <p>Teacher verification closes</p>
+              </li>
+              <li class="event" data-date="23rd June 2023">
+                <p>Decisions announced</p>
+              </li>
+              <li class="event" data-date="31st June 2023">
+                <p>Representing Physics 2023 begins!</p>
+              </li>
+            </ul>
+          </div>
+        </div> 
+      </div>
+    </div>
+  </div>
+
+    <div class="white-div d-flex flex-column text-center">
+      <h1 class="heading">How do I apply?</h1>
+      <div class="container text-left">
+        <p class="subtext"> Click on the link below, which will take you to an application form. <br> It will ask you for:</p>
+        <ul>         
+          <li> Your personal and contact details (so we can inform you of the outcome of your application) </li> 
+          <li> Contact details for your parent / guardian (so they can register you for the programme, if successful) </li>
+          <li> Your school and a nominated teacher (so they can provide a supporting reference) </li>
+          <li> Additional information about your studies (so we know where you're at) </li>
+          <li> Information about why you would like to attend Representing Physics 2023 (150-200 words)</li>
+        </ul>
+        <div class=" text-center">
+          <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply here!</button>
+        </div>
       </div>
     </div>
 
     <div class="white-div d-flex flex-column text-center">
-
       <h1 class="heading">Project Partners</h1>
       <div class="container" >
         <div style="padding-bottom: 10%;" class="row align-items-center">
@@ -217,140 +252,117 @@
 
     <div class="d-flex flex-column text-center" >
       <h1 class="heading"> FAQs </h1>
-      <p class="subtext">Who are The Blackett Lab Family? 
-        <a class="btn button" data-toggle="collapse" href="#faq-1" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i></a> 
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-1" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">Who are The Blackett Lab Family?  <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-1">
         <p class="subtext grey-text">
         We are a network of UK based Black physicists. Our mission is to diversify perceptions of physics and promote Black representation at all levels in the field.
         </p>
       </div>
 
-      <p class="subtext">Can I join The Blackett Lab Family? 
-        <a class="btn button" data-toggle="collapse" href="#faq-2" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i></a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-2" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">Can I join The Blackett Lab Family?  <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-2">
         <p class="subtext grey-text">
         Our members have completed a post-16 qualification in physics or a physics related course. We encourage you to continue with physics so that you can join the crew too!
         </p>
       </div>
 
-      <p class="subtext">I am not of Black heritage, can I still take part in the programme?
-        <a class="btn button" data-toggle="collapse" href="#faq-3" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;" ></i></a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-3" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">I am not of Black heritage, can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-3">
         <p class="subtext grey-text">
         Representing Physics 2023 is a programme designed to encourage students of Black heritage - currently significantly underrepresented in the field – to consider pursuing a physics or physics-related course. If you are not of Black heritage, we encourage you to consider alternative summer schools and programmes if you are interested in physics.
         </p>
       </div>
-        
-      <p class="subtext">I am not based in London, can I still take part in the programme?
-        <a class="btn button" data-toggle="collapse" href="#faq-4" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+       
+      <a class="btn button" data-toggle="collapse" href="#faq-4" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">I am not based in London, can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-4">
         <p class="subtext grey-text">
         Representing Physics 2023 is a London based, non-residential programme; therefore, we welcome students based in London who are able to travel to and from the programme across three-days.
         </p>
       </div>
 
-      <p class="subtext">I am not in Year 11 or Year 12, can I still take part in the programme?
-        <a class="btn button" data-toggle="collapse" href="#faq-5" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-5" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">I am not in Year 11 or Year 12, can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-5">
         <p class="subtext grey-text">
         Representing Physics 2023 is a programme for London based students who are currently (at the time of applying) in Year 11 or Year 12.  If you are not in either year group at the time of applying, we encourage you to consider alternative summer schools and programmes if you are interested in physics.
         </p>
       </div>
 
-      <p class="subtext">How much will it cost to participate in the programme?
-        <a class="btn button" data-toggle="collapse" href="#faq-6" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-6" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">How much will it cost to participate in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-6">
         <p class="subtext grey-text">
         The programme is totally free to attend. We will cover all costs, including food and travel to and from the programme. 
         </p>
       </div>
 
-      <p class="subtext">What happens if my application is successful?
-        <a class="btn button" data-toggle="collapse" href="#faq-7" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-7" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">What happens if my application is successful? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-7">
         <p class="subtext grey-text">
         You will receive confirmation by email about the outcome of your application. If successful, you and your parent / carer / legal guardian will be invited to register for Representing Physics 2023.
         </p>
       </div>
 
-      <p class="subtext">What happens if my application is unsuccessful?
-        <a class="btn button" data-toggle="collapse" href="#faq-8" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-8" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">What happens if my application is unsuccessful? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-8">
         <p class="subtext grey-text">
         You will receive confirmation by email about the outcome of your application. If unsuccessful, you will still be able to benefit from the resources and activities we share following the programme. 
         </p>
       </div>
    
-      <p class="subtext">How do I get to The Blackett Laboratory at Imperial College London?
-        <a class="btn button" data-toggle="collapse" href="#faq-9" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-9" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">How do I get to The Blackett Laboratory at Imperial College London? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-9">
         <p class="subtext grey-text">
         The Blackett Laboratory is the Physics Department at Imperial College London, South Kensington Campus, SW7 2AZ. The nearest tube station is South Kensington, on the District and Circle Lines. 
         </p>
       </div>
 
-      <p class="subtext">How will I be travelling to different locations during the programme?
-        <a class="btn button" data-toggle="collapse" href="#faq-10" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-10" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">How will I be travelling to different locations during the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-10">
         <p class="subtext grey-text">
         Registration will be at The Blackett Laboratory for each morning of the programme. Group travel during the day will be organised and supervised by us; either by TfL, or by coach. You will need an Oyster card or equivalent - and we will cover the cost of your travel.
         </p>
       </div>
 
-      <p class="subtext">I can only attend part of the programme; can I still apply?
-        <a class="btn button" data-toggle="collapse" href="#faq-11" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-11" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">I can only attend part of the programme; can I still apply? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-11">
         <p class="subtext grey-text">
         Representing Physics 2023 is a three-day programme offering a range of experiences and opportunities to students of Black heritage interested in physics. We encourage you to apply if you are able to commit to all three days of the programme. 
         </p>
       </div>
 
-      <p class="subtext">I have SEN, a disability or a medical condition; can I still take part in the programme?
-        <a class="btn button" data-toggle="collapse" href="#faq-12" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-12" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">I have SEN, a disability or a medical condition; can I still take part in the programme? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-12">
         <p class="subtext grey-text">
         We welcome students of Black heritage of all abilities, including those with additional needs, to apply to the programme. During registration, you will be able to tell us more about your needs so we can make the programme as safe and inclusive as possible.
         </p>
       </div>
 
-      <p class="subtext">How can I contact The Blackett Lab Family?
-        <a class="btn button" data-toggle="collapse" href="#faq-13" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fas fa-chevron-down" style="color: white;"></i>
-        </a>
-      </p>
+      <a class="btn button" data-toggle="collapse" href="#faq-13" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <p class="subtext">How can I contact The Blackett Lab Family? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+      </a>
       <div class="collapse" id="faq-13">
         <p class="subtext grey-text">
         We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at connect@theblackettlabfamily.com
