Disable rp2033 link

--- a/join/index.html
+++ b/join/index.html
@@ -69,7 +69,7 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="https://theblackettlabfamily.com/rising-stars">Rising Stars</a>
-                    <a class="dropdown-item" href="https://theblackettlabfamily.com/rp2023">Representing Physics 2023</a>
+                    <!-- <a class="dropdown-item" href="https://theblackettlabfamily.com/rp2023">Representing Physics 2023</a> -->
                   </div>
                 </li>
                 <li class="nav-item">
